Code cleanups and comment code update